Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(100) [not null]
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table categories {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  name varchar(100) [not null]
  slug varchar(100) [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table products {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, ref: > users.id]
  name varchar(200) [not null]
  slug varchar(200) [not null]
  price bigint [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (user_id, slug) [unique]
  }
}

Table product_categories {
  product_id uuid [not null, ref: > products.id]
  category_id uuid [not null, ref: > categories.id]

  indexes {
    (product_id, category_id) [unique]
  }
}
